Add Statistics Controller
- Add Statistics Controller
- Update Default User Profile Image
- Add Statistics routes
- Add Statistics class on application layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,6 +42,7 @@
 @import "bootstrap/navbar";
 @import "bootstrap/badge";
 @import "bootstrap/input-group";
+@import "bootstrap/card";
 
 // Datatables
 @import 'datatables';
