--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -33,7 +33,7 @@
     </li>
 
     <!-- # Expenses -->
-    <li class="<%= current_path('expenses') ? 'active-list' : '' %> nav-item">
+    <li class="<%= current_path('expenses/') ? 'active-list' : '' %> nav-item">
       <a data-toggle="collapse"
          href="#expensesCollapse"
          aria-expanded="false"
@@ -43,7 +43,7 @@
         <%= fa_icon 'angle-right' %>
         <%= fa_icon 'angle-down' %>
       </a>
-      <ul class="<%= current_path('expenses') ? 'collapse show' : 'collapse hide' %> multi-collapse" id="expensesCollapse">
+      <ul class="<%= current_path('expenses/') ? 'collapse show' : 'collapse hide' %> multi-collapse" id="expensesCollapse">
         <li>
           <%= link_to all_expenses_path, class: "#{ current_path('expenses/all') ? 'active' : '' }" do %>
               <%= fa_icon 'caret-right' %> Toutes les Dépenses
@@ -114,6 +114,31 @@
           <%= link_to owners_path, class: "#{ current_path('owners') ? 'active' : '' }" do %>
               <%= fa_icon 'caret-right' %> Propriétaires
           <% end %>
+        </li>
+      </ul>
+    </li>
+
+    <!-- # Statistics -->
+    <li class="<%= current_path('statistics') ? 'active-list' : '' %> nav-item">
+      <a data-toggle="collapse"
+         href="#cabStatistics"
+         aria-expanded="false"
+         aria-controls="cabStatistics">
+        <%= fa_icon 'bar-chart' %>
+        Statistics
+        <%= fa_icon 'angle-right' %>
+        <%= fa_icon 'angle-down' %>
+      </a>
+      <ul class="<%= current_path('statistics') ? 'collapse show' : 'collapse' %> multi-collapse" id="cabStatistics">
+        <li>
+          <%= link_to "#{fa_icon 'caret-right'} Dépenses".html_safe,
+                      {controller: 'statistics', action: 'expenses'},
+                      class: "#{ current_path('expenses') ? 'active' : '' }" %>
+        </li>
+        <li>
+          <%= link_to "#{fa_icon 'caret-right'} Revenus".html_safe,
+                      {controller: 'statistics', action: 'revenus'},
+                      class: "#{ current_path('revenus') ? 'active' : '' }" %>
         </li>
       </ul>
     </li>
