Add Statistics Navigation and Routes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
               <%= render 'layouts/title_header' %>
 
               <!-- # Content -->
-              <div class="<%= !current_path('statistics') ? 'main-content' : 'stat' %>">
+              <div class="<%= !current_path('statistics') ? 'main-content' : 'main-content stats' %>">
                 <%= yield %>
               </div>
 
