--- a/app/views/statistics/expenses.html.erb
+++ b/app/views/statistics/expenses.html.erb
@@ -7,17 +7,17 @@
         <h4 class="card-title">
           Dépenses Générales
           <b>
-            <%= number_to_currency(@total_expenses, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
+            <%= number_to_currency(Expense.expenses_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
           </b>
         </h4>
 
         <!-- # Canvas -->
         <canvas id="allExpensesStats">
           <!-- # Values-->
-          <div id="expenses-breaks-stats"><%= @breaks_percent %></div>
-          <div id="expenses-assurances-stats"><%= @insurances_percent %></div>
-          <div id="expenses-damages-stats"><%= @damages_percent %></div>
-          <div id="expenses-ownertakes-stats"><%= @owner_takes_percent %></div>
+          <div id="expenses-breaks-stats"><%= calculat_percent(Break.breaks_sum, Expense.expenses_sum) %></div>
+          <div id="expenses-assurances-stats"><%= calculat_percent(Insurance.insurances_sum, Expense.expenses_sum) %></div>
+          <div id="expenses-damages-stats"><%= calculat_percent(Damage.damages_sum, Expense.expenses_sum) %></div>
+          <div id="expenses-ownertakes-stats"><%= calculat_percent(OwnerTake.owner_takes_sum, Expense.expenses_sum) %></div>
         </canvas>
 
       </div>
@@ -27,6 +27,24 @@
   <!-- # Right Column -->
   <div class="col-md-7 stats-col">
 
+    <div class="col-sm-12">
+      <div class="card">
+        <div class="card-body">
+
+          <select name="insurances_years" id="insurances_years">
+            <option value="2014">2014</option>
+            <option value="2015">2015</option>
+            <option value="2016">2016</option>
+            <option value="2017">2017</option>
+          </select>
+
+          <ul id="insssur">
+          </ul>
+
+        </div>
+      </div>
+    </div>
+
     <!-- # Breaks -->
     <div class="col-sm-12">
       <div class="card">
@@ -35,7 +53,7 @@
           <h4 class="card-title">
             Arrêts
             <b>
-              <%= number_to_currency(@breaks_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
+              <%= number_to_currency(Break.breaks_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
             </b>
           </h4>
 
@@ -54,7 +72,7 @@
           <h4 class="card-title">
             Assurances
             <b>
-              <%= number_to_currency(@insurances_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
+              <%= number_to_currency(Insurance.insurances_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
             </b>
           </h4>
 
@@ -74,13 +92,13 @@
           <h4 class="card-title">
             Dégats
             <b>
-              <%= number_to_currency(@damages_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
+              <%= number_to_currency(Damage.damages_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
             </b>
           </h4>
         </div>
       </div>
     </div>
-to
+    to
     <!-- # Owner Takes -->
     <div class="col-sm-12">
       <div class="card">
@@ -88,7 +106,7 @@ to
           <h4 class="card-title">
             Recettes
             <b>
-              <%= number_to_currency(@owner_takes_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
+              <%= number_to_currency(OwnerTake.owner_takes_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
             </b>
           </h4>
         </div>
