--- a/app/views/statistics/expenses.html.erb
+++ b/app/views/statistics/expenses.html.erb
@@ -1,28 +1,7 @@
 <div class="row">
 
   <!-- All Expenses -->
-  <div class="col-sm-5">
-    <div class="card">
-      <div class="card-body">
-        <h4 class="card-title">
-          Dépenses Générales
-          <b>
-            <%= number_to_currency(Expense.expenses_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
-          </b>
-        </h4>
-
-        <!-- # Canvas -->
-        <canvas id="allExpensesStats">
-          <!-- # Values-->
-          <div id="expenses-breaks-stats"><%= calculat_percent(Break.breaks_sum, Expense.expenses_sum) %></div>
-          <div id="expenses-assurances-stats"><%= calculat_percent(Insurance.insurances_sum, Expense.expenses_sum) %></div>
-          <div id="expenses-damages-stats"><%= calculat_percent(Damage.damages_sum, Expense.expenses_sum) %></div>
-          <div id="expenses-ownertakes-stats"><%= calculat_percent(OwnerTake.owner_takes_sum, Expense.expenses_sum) %></div>
-        </canvas>
-
-      </div>
-    </div>
-  </div>
+  <%= render 'statistics/expenses/all_expenses_stats' %>
 
   <!-- # Right Column -->
   <div class="col-md-7 stats-col">
@@ -38,80 +17,21 @@
             <option value="2017">2017</option>
           </select>
 
-          <ul id="insssur">
-          </ul>
-
         </div>
       </div>
     </div>
 
     <!-- # Breaks -->
-    <div class="col-sm-12">
-      <div class="card">
-        <div class="card-body">
-
-          <h4 class="card-title">
-            Arrêts
-            <b>
-              <%= number_to_currency(Break.breaks_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
-            </b>
-          </h4>
-
-          <!-- # Canvas -->
-          <canvas id="BreaksExpensesStats"></canvas>
-
-        </div>
-      </div>
-    </div>
+    <%= render 'statistics/expenses/breaks_stats' %>
 
     <!-- # Insurances -->
-    <div class="col-sm-12">
-      <div class="card">
-        <div class="card-body">
-
-          <h4 class="card-title">
-            Assurances
-            <b>
-              <%= number_to_currency(Insurance.insurances_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
-            </b>
-          </h4>
-
-          <!-- # Canvas -->
-          <canvas id="InsurancesExpensesStats">
-
-          </canvas>
-
-        </div>
-      </div>
-    </div>
+    <%= render 'statistics/expenses/insurances_stats' %>
 
     <!-- # Damages -->
-    <div class="col-sm-12">
-      <div class="card">
-        <div class="card-body">
-          <h4 class="card-title">
-            Dégats
-            <b>
-              <%= number_to_currency(Damage.damages_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
-            </b>
-          </h4>
-        </div>
-      </div>
-    </div>
+    <%= render 'statistics/expenses/damages_stats' %>
 
     <!-- # Owner Takes -->
-    <div class="col-sm-12">
-      <div class="card">
-        <div class="card-body">
-          <h4 class="card-title">
-            Recettes
-            <b>
-              <%= number_to_currency(OwnerTake.owner_takes_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
-            </b>
-          </h4>
-        </div>
-      </div>
-    </div>
+    <%= render 'statistics/expenses/owner_takes_stats' %>
 
   </div>
 
