--- a/app/assets/stylesheets/statistics.scss
+++ b/app/assets/stylesheets/statistics.scss
@@ -7,7 +7,6 @@
       float: right;
       font-weight: bold;
       font-size: 13px;
-      color: #6b7fa7;
     }
   }
 }
@@ -15,4 +14,7 @@
   > div {
     margin-bottom: 15px;
   }
+}
+.date-filter {
+  padding: 15px 0 23px 0;
 }
