--- a/app/views/statistics/expenses/_insurances_stats.html.erb
+++ b/app/views/statistics/expenses/_insurances_stats.html.erb
@@ -4,7 +4,7 @@
 
       <h4 class="card-title">
         Assurances
-        <b>
+        <b class="badge badge-info">
           <%= number_to_currency(Insurance.insurances_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
         </b>
       </h4>
