--- a/app/views/statistics/expenses/_breaks_stats.html.erb
+++ b/app/views/statistics/expenses/_breaks_stats.html.erb
@@ -4,10 +4,29 @@
 
       <h4 class="card-title">
         Arrêts
-        <b>
+        <b class="badge badge-info">
           <%= number_to_currency(Break.breaks_sum, unit: '', separator: ',', delimiter: '', precision: 1) %> DH
         </b>
       </h4>
+
+      <div class="row justify-content-md-center date-filter">
+
+        <div class="col col-lg-6 form-inline">
+
+          <div class="input-group date mr-sm-1" id="years-only">
+            <input type="text" class="form-control" placeholder="ex: 2017"/>
+            <div class="input-group-addon">
+              <span class="fa fa-calendar"></span>
+            </div>
+          </div>
+
+          <a href="#" id="get_breaks_by_year" class="btn btn-dark">
+            <%= fa_icon 'search' %>
+          </a>
+
+        </div>
+
+      </div>
 
       <!-- # Canvas -->
       <canvas id="BreaksExpensesStats"></canvas>
