Add Breaks Statistics Filter By Year and Month

--- a/app/views/statistics/expenses/_breaks_stats.html.erb
+++ b/app/views/statistics/expenses/_breaks_stats.html.erb
@@ -39,7 +39,7 @@
 
             <div class="col col-lg-6 form-inline">
 
-              <div class="input-group date mr-sm-1" id="years-only">
+              <div class="input-group date mr-sm-1" id="breaks-years-date">
                 <input type="text" class="form-control" placeholder="ex: 2017"/>
                 <div class="input-group-addon">
                   <span class="fa fa-calendar"></span>
@@ -66,7 +66,7 @@
 
             <div class="col col-lg-6 form-inline">
 
-              <div class="input-group date mr-sm-1" id="years-and-months-only">
+              <div class="input-group date mr-sm-1" id="breaks-years-and-months-date">
                 <input type="text" class="form-control" placeholder="ex: 04/2018"/>
                 <div class="input-group-addon">
                   <span class="fa fa-calendar"></span>
