Update Expenses and Damages Stats
- Enable Stats Year tab instead of Month
- Remove appending canvas dynamically

--- a/app/views/statistics/expenses/_damages_stats.html.erb
+++ b/app/views/statistics/expenses/_damages_stats.html.erb
@@ -13,14 +13,14 @@
       <!-- # Tabs -->
       <ul class="nav nav-tabs justify-content-center" id="damagesTab" role="tablist">
         <li class="nav-item">
-          <a class="nav-link"
+          <a class="nav-link active"
              id="damage-stats-year-tab"
              data-toggle="tab"
              href="#damage-stat-year"
              role="tab" aria-controls="damage-stat-year" aria-expanded="true">Year</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active"
+          <a class="nav-link"
              id="damage-stat-year-and-month-tab"
              data-toggle="tab"
              href="#damage-stat-year-and-month"
@@ -33,7 +33,7 @@
       <div class="tab-content" id="damagesTabContent">
 
         <!-- # Filter By Year -->
-        <div class="tab-pane fade" id="damage-stat-year" role="tabpanel" aria-labelledby="damage-stats-year-tab">
+        <div class="tab-pane fade show active" id="damage-stat-year" role="tabpanel" aria-labelledby="damage-stats-year-tab">
           <!-- # Filter -->
           <div class="row justify-content-md-center date-filter">
 
@@ -59,7 +59,7 @@
         </div>
 
         <!-- # Filter By Year and Month -->
-        <div class="tab-pane fade show active" id="damage-stat-year-and-month" role="tabpanel" aria-labelledby="damage-stat-year-and-month-tab">
+        <div class="tab-pane fade" id="damage-stat-year-and-month" role="tabpanel" aria-labelledby="damage-stat-year-and-month-tab">
 
           <!-- # Filter -->
           <div class="row justify-content-md-center date-filter">
