--- a/app/views/statistics/expenses/_breaks_stats.html.erb
+++ b/app/views/statistics/expenses/_breaks_stats.html.erb
@@ -13,14 +13,14 @@
       <!-- # Tabs -->
       <ul class="nav nav-tabs justify-content-center" id="breaksTab" role="tablist">
         <li class="nav-item">
-          <a class="nav-link"
+          <a class="nav-link active"
              id="filter-by-year-tab"
              data-toggle="tab"
              href="#filter-by-year"
              role="tab" aria-controls="filter-by-year" aria-expanded="true">Year</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active"
+          <a class="nav-link"
              id="filter-by-year-and-month-tab"
              data-toggle="tab"
              href="#filter-by-year-and-month"
@@ -33,7 +33,7 @@
       <div class="tab-content" id="breaksTabContent">
 
         <!-- # Filter By Year -->
-        <div class="tab-pane fade" id="filter-by-year" role="tabpanel" aria-labelledby="filter-by-year-tab">
+        <div class="tab-pane fade show active" id="filter-by-year" role="tabpanel" aria-labelledby="filter-by-year-tab">
           <!-- # Filter -->
           <div class="row justify-content-md-center date-filter">
 
@@ -59,7 +59,7 @@
         </div>
 
         <!-- # Filter By Year and Month -->
-        <div class="tab-pane fade show active" id="filter-by-year-and-month" role="tabpanel" aria-labelledby="filter-by-year-and-month-tab">
+        <div class="tab-pane fade" id="filter-by-year-and-month" role="tabpanel" aria-labelledby="filter-by-year-and-month-tab">
 
           <!-- # Filter -->
           <div class="row justify-content-md-center date-filter">
