--- a/app/views/manager_takes/index.html.erb
+++ b/app/views/manager_takes/index.html.erb
@@ -1,10 +1,10 @@
-<h4>Recettes Propriétaires</h4>
+<h4>Manager Take</h4>
 
 <!-- # -->
 <div class="actions row">
 
   <div class="col-md-4">
-    <%= link_to new_owner_take_path, :class => 'btn btn-info btn-sm' do %>
+    <%= link_to new_manager_take_path, :class => 'btn btn-info btn-sm' do %>
         Ajouter une nouvelle Recette
     <% end %>
   </div>
@@ -18,12 +18,12 @@
 
 </div>
 
+
 <!-- # -->
 <table id="owner-take-data" class="table table-bordered">
 
   <thead>
     <tr>
-      <th>Récepteur</th>
       <th>Date</th>
       <th>Montant en DH</th>
       <th class="td-actions">Actions</th>
@@ -31,33 +31,32 @@
   </thead>
 
   <tbody>
-    <% @owner_takes.each do |owner_take| %>
+  <% @manager_takes.each do |manager_take| %>
       <tr>
-        <td><%= owner_take.owner.full_name %></td>
-        <td><%= owner_take.date %></td>
-        <td><%= owner_take.expense.amount %></td>
+        <td><%= manager_take.date %></td>
+        <td><%= manager_take.income.amount %></td>
         <td>
-          <%= link_to owner_take, :class => 'btn btn-outline-dark btn-sm' do %>
+          <%= link_to manager_take, :class => 'btn btn-outline-dark btn-sm' do %>
               <%= fa_icon 'eye' %>
           <% end %>
-          <%= link_to edit_owner_take_path(owner_take), :class => 'btn btn-outline-dark btn-sm' do %>
+          <%= link_to edit_manager_take_path(manager_take), :class => 'btn btn-outline-dark btn-sm' do %>
               <%= fa_icon 'pencil' %>
           <% end %>
-          <%= link_to owner_take, method: :delete, data: { confirm: 'Êtes vous sur?' }, class: 'btn btn-outline-dark btn-sm' do %>
+          <%= link_to manager_take, method: :delete, data: { confirm: 'Êtes vous sur?' }, class: 'btn btn-outline-dark btn-sm' do %>
               <%= fa_icon 'close' %>
           <% end %>
         </td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 
   <tfoot>
-    <tr class="table-sum">
-      <td colspan="2"><b>Total</b></td>
-      <td colspan="2">
-        <b><%= @owner_takes_sum %> DH</b>
-      </td>
-    </tr>
+  <tr class="table-sum">
+    <td colspan="2"><b>Total</b></td>
+    <td colspan="2">
+      <b><%= @manager_takes_sum %> DH</b>
+    </td>
+  </tr>
   </tfoot>
 
 </table>
