Replace User By Manager
- Replace User by Manager and add Manager Relation to Manager Take

--- a/app/views/cabs/_form.html.erb
+++ b/app/views/cabs/_form.html.erb
@@ -35,8 +35,8 @@
     </div>
 
     <div class="field">
-      <%= form.label :user_id %>
-      <%= form.collection_select :user_id, User.group(:email), :id, :email, {
+      <%= form.label :manager_id %>
+      <%= form.collection_select :manager_id, Manager.group(:email), :id, :email, {
         :multiple => false,
         :include_blank => 'Select a Manager',
       } %>
