--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <div class="container-fluid">
 
       <!-- # Authenticated User -->
-      <% if user_signed_in? %>
+      <% if manager_signed_in? %>
 
           <!-- # Header -->
           <%= render 'layouts/header' %>
