--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,24 +26,24 @@
                aria-controls="userMenuDropDown">
 
               <span class="pull-right">
-                <% if current_user.picture? %>
-                  <%= image_tag(current_user.picture) %>
+                <% if current_manager.picture? %>
+                  <%= image_tag(current_manager.picture) %>
                     <% else %>
                   <%= image_tag('default-user.png') %>
                 <% end %>
               </span>
-              <%= current_user.full_name %>
+              <%= current_manager.full_name %>
             </a>
 
             <!-- # Drop Down -->
             <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenuDropDown">
               <li class="dropdown-item">
-                <%= link_to edit_user_registration_path(current_user) do %>
+                <%= link_to edit_manager_registration_path(current_manager) do %>
                     <%= fa_icon 'user' %> Mon Profile
                 <% end %>
               </li>
               <li class="dropdown-item">
-                <%= link_to destroy_user_session_path, method: :delete do %>
+                <%= link_to destroy_manager_session_path, method: :delete do %>
                     <%= fa_icon 'close' %> Déconnexion
                 <% end %>
               </li>
