Add Income Statistics

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -161,7 +161,7 @@
                       class: "#{ current_path('expenses') ? 'active' : '' }" %>
         </li>
         <li>
-          <%= link_to "#{fa_icon 'caret-right'} Incomes".html_safe,
+          <%= link_to "#{fa_icon 'caret-right'} Revenus".html_safe,
                       {controller: 'statistics', action: 'incomes'},
                       class: "#{ current_path('incomes') ? 'active' : '' }" %>
         </li>
