--- a/app/views/statistics/incomes.html.erb
+++ b/app/views/statistics/incomes.html.erb
@@ -1,20 +1,14 @@
 <div class="row">
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h4 class="card-title">Special title treatment</h4>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
+
+  <!-- All Incomes -->
+  <%= render 'statistics/incomes/all_incomes_stats' %>
+
+  <!-- # Right Column -->
+  <div class="col-md-7 stats-col">
+
+    <!-- # Manager Takes -->
+    <%= render 'statistics/incomes/manager_takes_stats' %>
+
   </div>
-  <div class="col-sm-6">
-    <div class="card">
-      <div class="card-body">
-        <h4 class="card-title">Special title treatment</h4>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
-  </div>
+
 </div>
