--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,13 +15,13 @@
 @import 'font-awesome';
 
 // Bootstrap
-@import 'bootstrap';
+@import '../../../node_modules/bootstrap/dist/css/bootstrap.min';
 
 // Datatables
-@import 'datatables';
+@import '../../../node_modules/datatables/media/css/jquery.dataTables.min';
 
 // Bootstrap Date
-@import 'bootstrap-datetimepicker';
+@import '../../../node_modules/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min';
 
 @import 'login';
 @import 'header';
