--- a/app/views/statistics/incomes/_manager_takes_stats.html.erb
+++ b/app/views/statistics/incomes/_manager_takes_stats.html.erb
@@ -39,7 +39,7 @@
 
             <div class="col col-lg-6 form-inline">
 
-              <div class="input-group date mr-sm-1" id="manager_takes-years-date">
+              <div class="input-group date mr-sm-1 years_only">
                 <input type="text" class="form-control" placeholder="ex: 2017"/>
                 <div class="input-group-addon">
                   <span class="fa fa-calendar"></span>
@@ -66,7 +66,7 @@
 
             <div class="col col-lg-6 form-inline">
 
-              <div class="input-group date mr-sm-1" id="manager_takes-years-and-months-date">
+              <div class="input-group date mr-sm-1 years_and_months">
                 <input type="text" class="form-control" placeholder="ex: 04/2018"/>
                 <div class="input-group-addon">
                   <span class="fa fa-calendar"></span>
