--- a/app/views/statistics/expenses/_breaks_stats.html.erb
+++ b/app/views/statistics/expenses/_breaks_stats.html.erb
@@ -55,7 +55,7 @@
           </div>
 
           <!-- # Canvas -->
-          <canvas id="BreaksExpensesStats"></canvas>
+          <canvas id="BreaksExpenses_years"></canvas>
         </div>
 
         <!-- # Filter By Year and Month -->
@@ -82,7 +82,7 @@
           </div>
 
           <!-- # Canvas -->
-          <canvas id="BreaksExpensesStats_2"></canvas>
+          <canvas id="BreaksExpenses_months"></canvas>
 
         </div>
       </div>
