--- a/app/views/statistics/expenses/_damages_stats.html.erb
+++ b/app/views/statistics/expenses/_damages_stats.html.erb
@@ -55,7 +55,7 @@
           </div>
 
           <!-- # Canvas -->
-          <canvas id="DamagesExpensesStats"></canvas>
+          <canvas id="DamagesExpenses_years"></canvas>
         </div>
 
         <!-- # Filter By Year and Month -->
@@ -82,7 +82,7 @@
           </div>
 
           <!-- # Canvas -->
-          <canvas id="DamagesExpensesStats_2"></canvas>
+          <canvas id="DamagesExpenses_months"></canvas>
 
         </div>
       </div>
