Add Doughnut Charts

--- a/app/views/statistics/expenses/_all_expenses_stats.html.erb
+++ b/app/views/statistics/expenses/_all_expenses_stats.html.erb
@@ -9,7 +9,7 @@
       </h4>
 
       <!-- # Canvas -->
-      <canvas id="allExpensesStats">
+      <canvas id="AllExpenses">
         <!-- # Values-->
         <div id="expenses-breaks-stats"><%= calculat_percent(Break.breaks_sum, Expense.expenses_sum) %></div>
         <div id="expenses-assurances-stats"><%= calculat_percent(Insurance.insurances_sum, Expense.expenses_sum) %></div>
