--- a/app/views/statistics/incomes/_all_incomes_stats.html.erb
+++ b/app/views/statistics/incomes/_all_incomes_stats.html.erb
@@ -9,7 +9,7 @@
       </h4>
 
       <!-- # Canvas -->
-      <canvas id="allIncomesStats">
+      <canvas id="AllIncomes">
         <div id="incomes-managertakes-stats"><%= calculat_percent(ManagerTake.manager_takes_sum, Income.incomes_sum) %></div>
       </canvas>
 
