--- a/app/assets/stylesheets/datatables.scss
+++ b/app/assets/stylesheets/datatables.scss
@@ -16,22 +16,22 @@ table.dataTable thead .sorting_desc_disabled {
   background-position: center right;
 }
 table.dataTable thead .sorting {
-  background-image: url(image_path('sort_both.png'));
+  background-image: url('../images/sort_both.png');
 }
 table.dataTable thead .sorting_asc {
-  background-image: url(image_path("sort_asc.png"));
+  background-image: url('../images/sort_asc.png');
 }
 table.dataTable thead .sorting_desc {
-  background-image: url(image_path("sort_desc.png"));
+  background-image: url('../images/sort_desc.png');
 }
 table.dataTable thead .sorting_asc_disabled {
-  background-image: url(image_path("sort_asc_disabled.png"));
+  background-image: url('../images/sort_asc_disabled.png');
 }
 table.dataTable thead .sorting_desc_disabled {
-  background-image: url(image_path("sort_desc_disabled.png"));
+  background-image: url('../images/sort_desc_disabled.png');
 }
 table.dataTable tbody tr {
-  background-color: #ffffff;
+  background-color: #fff;
 }
 table.dataTable tbody tr.selected {
   background-color: #B0BED9;
