--- a/app/views/cabs/edit.html.erb
+++ b/app/views/cabs/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing Cab</h1>
+<h4>Editer ce Taxi</h4>
 
 <%= render 'form', cab: @cab %>
 
-<%= link_to 'Show', @cab %> |
-<%= link_to 'Back', cabs_path %>
+<%= link_to cabs_path, :class => 'badge badge-light' do %>
+    <%= fa_icon 'arrow-left' %> Retour
+<% end %>
+
+<%= link_to @cab, :class => 'badge badge-light' do %>
+    <%= fa_icon 'eye' %> Consulter Detail
+<% end %>
