--- a/app/views/cabs/new.html.erb
+++ b/app/views/cabs/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Cab</h1>
+<h4>New Cab</h4>
 
 <%= render 'form', cab: @cab %>
 
-<%= link_to 'Back', cabs_path %>
+<%= link_to cabs_path, :class => 'badge badge-light' do %>
+    <%= fa_icon 'arrow-left' %> Retour
+<% end %>
